# retiscope

./: Cargo.toml  README.md  flake.nix  package.json  vite.config.js
notes/: ARCHITECTURE.md  PROTOCOL_SPECIFICATION.md  a.md  console.md  font.md  future.md  gpui.md  gui.md  node_graph.md  plugins.md  python.md  random.md  ret-rs.md
src/: App.css  App.jsx  Logview.jsx  arguments.rs  errors.rs  index.jsx  main.rs  paths.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: arguments.rs  cli.rs  cli_.rs  errors.rs  files.rs  lib.rs  main.rs
src-tauri/src/cli/: daemon.rs  database_.rs  mod.rs
src-tauri/src/cli/listener/: mod.rs
src-tauri/src/data/: mod.rs
src-tauri/src/data/database/: mod.rs  surrealdb.rs
src-tauri/src/database/: data.rs  mod.rs  surrealdb.rs
src-tauri/src/gui/: mod.rs
src/components/: Connection.css  Connection.jsx  ConnectionLayout.jsx  NodeGraph.css  NodeGraph.jsx  NodeGraph_1.jsx  Sidebar.css  Sidebar.jsx
src/core/: capture.rs  mod.rs  serde_helpers.rs  storage.rs
src/daemon/: mod.rs
src/db/: config.rs  mod.rs
src/db/surrealdb/: mod.rs
src/network/: config.rs
src/store/: GlobalContext.jsx
src/ui/: app_view.rs  mod.rs
src/ui/components/: assets.rs  mod.rs  packets.rs
src/ui/pages/: dashboard.rs  mod.rs  packets.rs  packets_view.rs  settings.rs
