[package]
name = "retiscope"
version = "0.1.0"
edition = "2024"

[dependencies]
# gpui           = { git = "https://github.com/zed-industries/zed", rev = "5ec84a926ef83865afb92d2a3d1ca3b419572cf9"         }
# gpui_platform  = { git = "https://github.com/zed-industries/zed", rev = "5ec84a926ef83865afb92d2a3d1ca3b419572cf9"         , features = ["font-kit"] }
# gpui-component = { git = "https://github.com/longbridge/gpui-component"  }
gpui = "0.2.2"
gpui-component = "0.5.1"
anyhow = "1"
rust-embed = "8.11.0"
