[package]
name = "retiscope"
version = "0.1.0"
edition = "2024"

[dependencies]
# db (surreal at the bottom)
surrealdb = { version = "3.0.1" }
surrealdb-types = "3.0.1"

tracing = "0.1.44"
tracing-subscriber = "0.3.23"

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.1.2"

gpui = "0.2.2"
gpui-component = "0.5.1"
rust-embed = "8.11.0"
directories = "6.0.0"
chrono = { version = "0.4.44", features = ["serde"] }

reticulum = { git = "https://github.com/GimmeDataNow/Reticulum-rs", branch = "announce_redo"}
tokio = "1.49.0"
futures = "0.3.32"
async-trait = "0.1.89"

anyhow = "1"
