[package]
name = "retiscope"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1

[dependencies]
# db (surreal at the bottom)
surrealdb = { version = "3.0.1" }
surrealdb-types = "3.0.1"

tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = [ "env-filter" ] }


serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.1.2"

gpui = "0.2.2"
gpui-component = "0.5.1"
rust-embed = "8.11.0"
directories = "6.0.0"

reticulum = { git = "https://github.com/GimmeDataNow/Reticulum-rs", branch = "announce_redo"}
rand_core = { version = "0.6.4", features = ["getrandom"] }
chrono = { version = "0.4.44", features = ["serde"] }

tokio = "1.49.0"
futures = "0.3.32"
async-trait = "0.1.89"

anyhow = "1"
clap = { version = "4.6.1", features = ["derive"] }
tokio-util = "0.7.18"
