[workspace]
resolver = "2"
members = [
  ".",           # This represents the current 'retiscope' crate
  "crates/*",    # This will automatically pick up any folders in crates/
]

[package]
name = "retiscope"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "retiscope_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# my dep
reticulum = { git = "https://github.com/BeechatNetworkSystemsLtd/Reticulum-rs", rev = "6203b6b8334cca39410c5a1b9b226d31a8acf727"}
log = { path = "crates/log" }
clap = { version = "4.5", features = ["derive"] }
tokio = "1.49.0"

