[workspace]
resolver = "2"
members = [
  ".",           # This represents the current 'retiscope' crate
  "crates/*",    # This will automatically pick up any folders in crates/
]

[package]
name = "retiscope"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[profile.release]
incremental = false
codegen-units = 1      # Reduces parallel compilation to allow deeper optimization
lto = true             # Link Time Optimization (drastically reduces binary size)
opt-level = "s"        # Optimize for size (use "z" for even smaller, "3" for speed)
panic = "abort"        # Removes stack unwinding code; saves space and memory
strip = true           # Removes symbols and debug info automatically

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "retiscope_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# reticulum
reticulum = {  path = "../../Reticulum-rs/"}
rand_core = { version = "0.6.4", features = ["getrandom"] }

# tracing
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = [ "env-filter" ] }

# files
directories = "6.0.0"
toml = "1.0.3"

tokio = "1.49.0"
clap = { version = "4.5", features = ["derive"] }
# database
surrealdb = { version = "3.0.1" }
surrealdb-types = "3.0.1"
